✅ test(kis): KIS 공통·토큰·앱 테스트 추가·수정
Co-Authored-By: Claude Code <noreply@anthropic.com>