@@ -12,12 +12,18 @@ class KisPropertiesTest {
 
     private static final List<KisAccountCredential> DUMMY_ACCOUNTS =
             List.of(new KisAccountCredential("test", "12345678", "appkey", "appsecret"));
+    private static final KisProperties.RateLimit DUMMY_RATE_LIMIT =
+            new KisProperties.RateLimit(20, 20);
 
     @Test
     @DisplayName("baseUrl이 https://로 시작하면 정상 생성된다")
     void constructor_withHttpsBaseUrl_createsSuccessfully() {
         KisProperties props =
-                new KisProperties("https://openapi.koreainvestment.com", "user", DUMMY_ACCOUNTS);
+                new KisProperties(
+                        "https://openapi.koreainvestment.com",
+                        "user",
+                        DUMMY_ACCOUNTS,
+                        DUMMY_RATE_LIMIT);
 
         assertThat(props.baseUrl()).isEqualTo("https://openapi.koreainvestment.com");
     }
@@ -30,7 +36,8 @@ class KisPropertiesTest {
                                 new KisProperties(
                                         "http://openapi.koreainvestment.com",
                                         "user",
-                                        DUMMY_ACCOUNTS))
+                                        DUMMY_ACCOUNTS,
+                                        DUMMY_RATE_LIMIT))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("HTTPS scheme");
     }
@@ -38,7 +45,7 @@ class KisPropertiesTest {
     @Test
     @DisplayName("baseUrl이 null이면 IllegalArgumentException이 발생한다")
     void constructor_withNullBaseUrl_throwsIllegalArgumentException() {
-        assertThatThrownBy(() -> new KisProperties(null, "user", DUMMY_ACCOUNTS))
+        assertThatThrownBy(() -> new KisProperties(null, "user", DUMMY_ACCOUNTS, DUMMY_RATE_LIMIT))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("HTTPS scheme");
     }
@@ -46,7 +53,7 @@ class KisPropertiesTest {
     @Test
     @DisplayName("baseUrl이 빈 문자열이면 IllegalArgumentException이 발생한다")
     void constructor_withEmptyBaseUrl_throwsIllegalArgumentException() {
-        assertThatThrownBy(() -> new KisProperties("", "user", DUMMY_ACCOUNTS))
+        assertThatThrownBy(() -> new KisProperties("", "user", DUMMY_ACCOUNTS, DUMMY_RATE_LIMIT))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("HTTPS scheme");
     }
@@ -54,7 +61,13 @@ class KisPropertiesTest {
     @Test
     @DisplayName("baseUrl이 https로 시작하지만 ://가 없으면 IllegalArgumentException이 발생한다")
     void constructor_withHttpsWithoutSchemeDelimiter_throwsIllegalArgumentException() {
-        assertThatThrownBy(() -> new KisProperties("https-not-scheme", "user", DUMMY_ACCOUNTS))
+        assertThatThrownBy(
+                        () ->
+                                new KisProperties(
+                                        "https-not-scheme",
+                                        "user",
+                                        DUMMY_ACCOUNTS,
+                                        DUMMY_RATE_LIMIT))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("HTTPS scheme");
     }
@@ -67,7 +80,8 @@ class KisPropertiesTest {
                                 new KisProperties(
                                         "https://openapi.koreainvestment.com",
                                         null,
-                                        DUMMY_ACCOUNTS))
+                                        DUMMY_ACCOUNTS,
+                                        DUMMY_RATE_LIMIT))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("user-id");
     }
@@ -80,7 +94,8 @@ class KisPropertiesTest {
                                 new KisProperties(
                                         "https://openapi.koreainvestment.com",
                                         "   ",
-                                        DUMMY_ACCOUNTS))
+                                        DUMMY_ACCOUNTS,
+                                        DUMMY_RATE_LIMIT))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("user-id");
     }
@@ -91,7 +106,10 @@ class KisPropertiesTest {
         assertThatThrownBy(
                         () ->
                                 new KisProperties(
-                                        "https://openapi.koreainvestment.com", "user", null))
+                                        "https://openapi.koreainvestment.com",
+                                        "user",
+                                        null,
+                                        DUMMY_RATE_LIMIT))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("accounts");
     }
@@ -103,7 +121,10 @@ class KisPropertiesTest {
         assertThatThrownBy(
                         () ->
                                 new KisProperties(
-                                        "https://openapi.koreainvestment.com", "user", emptyList))
+                                        "https://openapi.koreainvestment.com",
+                                        "user",
+                                        emptyList,
+                                        DUMMY_RATE_LIMIT))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("accounts");
     }
@@ -116,7 +137,11 @@ class KisPropertiesTest {
 
         // Act
         KisProperties props =
-                new KisProperties("https://openapi.koreainvestment.com", "user", mutableList);
+                new KisProperties(
+                        "https://openapi.koreainvestment.com",
+                        "user",
+                        mutableList,
+                        DUMMY_RATE_LIMIT);
         mutableList.clear();
 
         // Assert: 원본 리스트 변경이 props.accounts()에 영향을 주지 않아야 함
@@ -129,7 +154,10 @@ class KisPropertiesTest {
         assertThatThrownBy(
                         () ->
                                 new KisProperties(
-                                        "https://openapi.koreainvestment.com", "", DUMMY_ACCOUNTS))
+                                        "https://openapi.koreainvestment.com",
+                                        "",
+                                        DUMMY_ACCOUNTS,
+                                        DUMMY_RATE_LIMIT))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("user-id");
     }
@@ -140,7 +168,10 @@ class KisPropertiesTest {
         assertThatThrownBy(
                         () ->
                                 new KisProperties(
-                                        "http://openapi.koreainvestment.com", null, DUMMY_ACCOUNTS))
+                                        "http://openapi.koreainvestment.com",
+                                        null,
+                                        DUMMY_ACCOUNTS,
+                                        DUMMY_RATE_LIMIT))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("HTTPS scheme")
                 .hasMessageContaining("user-id");
@@ -149,7 +180,7 @@ class KisPropertiesTest {
     @Test
     @DisplayName("3개 필드가 전부 잘못되면 세 위반이 모두 에러 메시지에 포함된다")
     void constructor_withAllInvalidFields_errorMessageContainsAllViolations() {
-        assertThatThrownBy(() -> new KisProperties(null, null, null))
+        assertThatThrownBy(() -> new KisProperties(null, null, null, DUMMY_RATE_LIMIT))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("HTTPS scheme")
                 .hasMessageContaining("user-id")
@@ -157,14 +188,71 @@ class KisPropertiesTest {
     }
 
     @Test
+    @DisplayName("4개 필드가 전부 잘못되면 네 위반이 모두 에러 메시지에 포함된다")
+    void constructor_withAllInvalidFieldsIncludingRateLimit_errorMessageContainsAllViolations() {
+        assertThatThrownBy(() -> new KisProperties(null, null, null, null))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("HTTPS scheme")
+                .hasMessageContaining("user-id")
+                .hasMessageContaining("accounts")
+                .hasMessageContaining("rate-limit");
+    }
+
+    @Test
     @DisplayName("accounts()가 반환하는 리스트는 불변이다")
     void accounts_returnsUnmodifiableList() {
         KisProperties props =
-                new KisProperties("https://openapi.koreainvestment.com", "user", DUMMY_ACCOUNTS);
+                new KisProperties(
+                        "https://openapi.koreainvestment.com",
+                        "user",
+                        DUMMY_ACCOUNTS,
+                        DUMMY_RATE_LIMIT);
 
         List<KisAccountCredential> accounts = props.accounts();
-        KisAccountCredential element = DUMMY_ACCOUNTS.get(0);
+        KisAccountCredential element = DUMMY_ACCOUNTS.getFirst();
         assertThatThrownBy(() -> accounts.add(element))
                 .isInstanceOf(UnsupportedOperationException.class);
+    }
+
+    @Test
+    @DisplayName("rateLimit이 null이면 IllegalArgumentException이 발생한다")
+    void constructor_withNullRateLimit_throwsIllegalArgumentException() {
+        assertThatThrownBy(
+                        () ->
+                                new KisProperties(
+                                        "https://openapi.koreainvestment.com",
+                                        "user",
+                                        DUMMY_ACCOUNTS,
+                                        null))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("rate-limit");
+    }
+
+    @Test
+    @DisplayName("rateLimit.capacity가 0이면 IllegalArgumentException이 발생한다")
+    void constructor_withZeroCapacity_throwsIllegalArgumentException() {
+        assertThatThrownBy(
+                        () ->
+                                new KisProperties(
+                                        "https://openapi.koreainvestment.com",
+                                        "user",
+                                        DUMMY_ACCOUNTS,
+                                        new KisProperties.RateLimit(0, 20)))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("rate-limit.capacity");
+    }
+
+    @Test
+    @DisplayName("rateLimit.refillPerSecond가 0이면 IllegalArgumentException이 발생한다")
+    void constructor_withZeroRefillPerSecond_throwsIllegalArgumentException() {
+        assertThatThrownBy(
+                        () ->
+                                new KisProperties(
+                                        "https://openapi.koreainvestment.com",
+                                        "user",
+                                        DUMMY_ACCOUNTS,
+                                        new KisProperties.RateLimit(20, 0)))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("rate-limit.refill-per-second");
     }
 }
